fixed desktop overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,8 +31,10 @@ nav {
     width: 25%;
 }
 
-#projectHouse{
-  width: 50%; float: right; height: 800px;
+#projectHouse {
+    width: 50%;
+    float: right;
+    height: 800px;
 }
 
 
@@ -64,7 +66,6 @@ nav {
     float: left;
     width: 45%;
     height: 110%;
-
 }
 
 #dropdown {
@@ -94,7 +95,7 @@ nav {
 .thumbnail iframe {
 
     width: 100%;
-    height: 100%;
+    height: 110%;
 }
 
 .thumbnail {
@@ -115,10 +116,10 @@ nav {
 
 @media only screen and (max-width: 569px) {
 
-    
+
     nav {
         width: 120%;
-    }  
+    }
     img {
         border-radius: 1%;
         height: 100%;
@@ -135,15 +136,14 @@ nav {
         height: 340px;
         margin-left: 2%;
         width: 100%;
-  
     }
 
     #imgContainer {
         margin-top: 1%;
         float: left;
-   
+
         margin-bottom: 1%;
-        width:15%;
+        width: 15%;
         height: 30%;
     }
 
@@ -151,14 +151,15 @@ nav {
 
 
         /*wrap around image area*/
-       
         margin-bottom: 200px;
         width: 100%;
     }
-#projectHouse{
-  
-  width: 110%; float: left; height: 120%;
-}
+    #projectHouse {
+
+        width: 110%;
+        float: left;
+        height: 120%;
+    }
     #projectCont,
     #projectCont1,
     #projectCont2 {
@@ -171,32 +172,30 @@ nav {
     }
 
     #preview {
-      overflow: hidden;
+        overflow: hidden;
         border-radius: 2%;
         padding-top: 2%;
         position: relative;
-        right:20px;
+        right: 20px;
         background-color: #E6F9FF;
         float: left;
         width: 60%;
         height: 110%;
-
     }
-#preview2 {
-      overflow: hidden;
+    #preview2 {
+        overflow: hidden;
         border-radius: 2%;
         padding-top: 2%;
         position: relative;
-        right:20px;
+        right: 20px;
         background-color: #E6F9FF;
         float: left;
         width: 60%;
         height: 110%;
-
     }
     #dropdown {
-      position: relative;
-      right:25px;
+        position: relative;
+        right: 25px;
         float: right;
         width: 30%;
         height: 20%;
@@ -211,38 +210,39 @@ nav {
         width: 60%;
         height: 110%;
         position: relative;
-        left:8px;
+        left: 8px;
     }
 
     #dropdown1 {
 
-      position: relative;
-      right:100px;
-       
-       
+        position: relative;
+        right: 100px;
+
+
         width: 30%;
         height: 20%;
     }
-}
 
-.thumbnail iframe {
 
-    width: 100%;
-    height: 50%;
-}
+    .thumbnail iframe {
 
-.thumbnail {
+        width: 100%;
+        height: 50%;
+    }
 
-    width: 100%;
-    height: 50%;
-}
+    .thumbnail {
 
-.thumbnail::after {
+        width: 100%;
+        height: 50%;
+    }
 
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    .thumbnail::after {
+
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
 }
